--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,20 @@ html {
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.6rem;
   background-color: var(--gray-900);
   color: var(--text-default);
+}
+
+.container {
+  max-width: 98rem;
+  background-color: red;
+  margin: 0 auto;
+}
+
+.content {
+  background-color: blue;
+  margin: 3.2rem;
 }
