--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,3 +26,19 @@ body {
   background-color: blue;
   margin: 3.2rem;
 }
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.formRow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.4rem;
+}
