Refactor Cycles component to dynamically render cycle indicators and update styles for break types

--- a/src/components/Cycles/styles.module.css
+++ b/src/components/Cycles/styles.module.css
@@ -22,10 +22,10 @@
   background-color: var(--warning);
 }
 
-.shortBreak {
+.shortBreaktime {
   background-color: var(--primary);
 }
 
-.longBreak {
+.longBreakTime {
   background-color: var(--info);
 }
